# cirno

./: .dockerignore  .env.prod  Dockerfile  README.md  bot.py  docker-compose.yml  entrypoint.sh  pyproject.toml
plugins/picture_ping/: __init__.py
plugins/ping/: __init__.py
plugins/voice_ping/: __init__.py
